2015-07-12  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	IT2349: ‘struct jvm_version_info’ has no member named
	‘is_kernel_jvm’
	IT2355: CACAO build fails to use JRE layout
	* configure.ac:
	Extend case statements to include 'openjdk8'.
	* m4/disable-test-dependency-checks.m4:
	Likewise.
	* m4/java-runtime-library.m4:
	(AC_CHECK_WITH_JAVA_RUNTIME_LIBRARY):
	Add openjdk8.
	* src/native/vm/openjdk/jvm.cpp:
	(JVM_GetVersionInfo(JNIEnv*,jvm_version_info*,size_t)):
	Only set is_kernel_jvm on OpenJDK < 8.

2008-06-14  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* configure.ac:
	* configure.ac (AC_INIT): Bumped version to 0.99. (OPT_CFLAGS): Set
	to -O2.
	[ea12d8e7f38d] [tip]

	* NEWS:
	* NEWS: Added latest 0.99 news.
	[3d976222eac4]

	* src/vm/properties.c:
	* src/vm/properties.c (properties_set): Changed java.vm.vendor to
	CACAOVM - Verein zur Foerderung der freien virtuellen Maschine
	CACAO.
	[801e8faac4a0]

	* .hgignore, configure.ac, tests/regression/Makefile.am,
	tests/regression/base/All.java, tests/regression/base/Makefile.am,
	tests/regression/base/TestExceptionInStaticClassInitializer.java,
	tests/regression/base/TestPatcher.java,
	tests/regression/junit/All.java, tests/regression/junit/Makefile.am,
	tests/regression/junit/TestExceptionInStaticClassInitializer.java,
	tests/regression/junit/TestPatcher.java:
	* .hgignore: Removed tests/regression/junit/*.class, added
	tests/regression/base/*.class.
	* configure.ac (AC_CONFIG_FILES): Removed
	tests/regression/junit/Makefile, added
	tests/regression/base/Makefile.
	* tests/regression/Makefile.am (SUBDIRS): Removed junit, added base.
	* tests/regression/junit/All.java, tests/regression/junit/Makefile.am,
	tests/regression/junit/TestExceptionInStaticClassInitializer.java,
	tests/regression/junit/TestPatcher.java: Moved from here...
	* tests/regression/base/All.java, tests/regression/base/Makefile.am,
	tests/regression/base/TestExceptionInStaticClassInitializer.java,