@@ -1,3 +1,15 @@
+2015-07-13  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	IT2035: --enable-cacao builds broken,
+	missing JVM_GetTemporaryDirectory impl.
+	* contrib/mapfile-vers-product:
+	Export JVM_GetTemporaryDirectory.
+	* src/native/vm/openjdk/jvm.cpp:
+	(JVM_GetTemporaryDirectory):
+	Return "/tmp" on Linux, FreeBSD,
+	Solaris and Darwin. Unimplemented
+	on other platforms.
+
 2015-07-12  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	IT2349: ‘struct jvm_version_info’ has no member named
